Write to questdb postgres